# Machine-Larning----Project

./: README.md  testes.ipynb
LinearRegression/: app.py  pyproject.toml  testes.ipynb
